# UAHR-LIDAR

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/UAHR/include/: UAHRLidarlib.hpp
config/yamls/: coordenadas_amarillo.yaml  coordenadas_azul.yaml
include/UAHR/include/: UAHRLidarClass.hpp  UAHRLidarlib.hpp  uahr_analyze.hpp  uahr_class.hpp  uahr_common.hpp  uahr_filters.hpp  uahr_types.hpp
include/UAHR/src/: UAHRLidarlib.cpp  uahr_analyze.cpp  uahr_common.cpp  uahr_filters.cpp  uahr_types.cpp
include/sdk/include/: rplidar.h
launch/UAHR/: Rviz.launch  UAHR_Lidar_Rviz.launch  UAHR_Lidar_RvizRaspy.launch  UAHR_Lidar_basic.launch  UAHR_Lidar_externRviz.launch  UAHR_Lidar_prompt.launch  basic.launch
launch/slamtec/: rplidar.launch  rplidar_a3.launch  rplidar_s1.launch  rplidar_s1_tcp.launch  test_rplidar.launch  test_rplidar_a3.launch  view_rplidar.launch  view_rplidar_a3.launch  view_rplidar_s1.launch  view_rplidar_s1_tcp.launch
sim/UAHR/: Fast_rviz.py  UAHR_Lidar.rviz  lidar_visualize.py  uahr_lidar_prompt.py
src/: uahrlidar.cpp
test/: LidarLib.cpp  data.txt  test_uahr_filters.cpp
