<?xml version="1.0"?>
<package>
  <name>uahr_lidar</name>
  <version>1.10.0</version>
  <description>UAHR lidar package, usefull package for Eurobo2020. Its a fork of rplidar ros package, support rplidar A2/A1 and A3/S1</description>

  <maintainer email="robotics@uah.es">Slamtec ROS Maintainer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>uahr_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>uahr_msgs</run_depend>

</package>
